knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>Reg Agent County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>