knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Credit_Agmt_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Agmt_Status__c</fullName>
    <label>Credit Agmt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
            <value>
                <fullName>Guarantor</fullName>
            </value>
            <value>
                <fullName>Secondary Borrower</fullName>
            </value>
            <value>
                <fullName>JV-Non-Guarantor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>