knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Critical_Access_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Critical_Access_Hospital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Access Hospital</label>
    <type>Checkbox</type>
</CustomField>