knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/CT_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>CT_Notified_Date__c</fullName>
    <label>CT Notified Date</label>
    <type>Date</type>
</CustomField>