knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Current_EM_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Current_EM_Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EM Incumbent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Current EM Incumbent)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>