knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Current_HM_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Current_HM_Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HM Incumbent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Current HM Incumbent)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>