knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Current_ICU_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Current_ICU_Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICU Incumbent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Current ICU Incumbent)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>