knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Current_ICU_Incumbent_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_ICU_Incumbent_Group_Type__c</fullName>
    <label>ICU Incumbent Group Type</label>
    <type>TextArea</type>
</CustomField>