knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Current_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio__c</fullName>
    <description>Current Ratio (Total Current Assets/Total Current Liabilities)</description>
    <label>Current Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>