knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Date_of_Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Fiscal_Year_End__c</fullName>
    <description>Date of Fiscal Year End</description>
    <label>Date of Fiscal Year End</label>
    <length>10</length>
    <type>Text</type>
</CustomField>