knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Days_Sales_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Days_Sales_Outstanding__c</fullName>
    <description>Days Sales Outstanding</description>
    <label>Days Sales Outstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>