knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Default_Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Default_Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the hiring manager</description>
    <inlineHelpText>This is the hiring manager</inlineHelpText>
    <label>Default Hiring Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>