knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Default_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Default_Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the recruiter</description>
    <inlineHelpText>This is the recruiter</inlineHelpText>
    <label>Default Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RecruiterFacilities</relationshipName>
    <type>Lookup</type>
</CustomField>