knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Definitive_ID__c.field-meta.xml
<CustomField>
    <fullName>Definitive_ID__c</fullName>
    <formula>TEXT( texcellency__DefHC_HospitalID__c )</formula>
    <label>DHC ID</label>
    <type>Text</type>
</CustomField>