knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Description_of_Prohibitions__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Prohibitions__c</fullName>
    <label>Description of Prohibitions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Prohibited</fullName>
            </value>
            <value>
                <fullName>Other Prohibitions</fullName>
            </value>
            <value>
                <fullName>Transmission, Storage &amp; Access Prohibited</fullName>
            </value>
            <value>
                <fullName>Transmission/Storage Prohibited</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>