knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Designated_Magnet_Hospital__c.field-meta.xml
<CustomField>
    <fullName>Designated_Magnet_Hospital__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Designated Magnet Hospital</label>
    <type>Checkbox</type>
</CustomField>