knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/DHC_Case_Mix_Index_CMI_Medicare__c.field-meta.xml
<CustomField>
    <fullName>DHC_Case_Mix_Index_CMI_Medicare__c</fullName>
    <description>DHC Case Mix Index (CMI) – Medicare</description>
    <label>DHC Case Mix Index (CMI) – Medicare</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>