knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/DHC_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DHC_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>DHC External ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>