knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/DHC_Integration_Link__c.field-meta.xml
<CustomField>
    <fullName>DHC_Integration_Link__c</fullName>
    <label>DHC Integration Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>