knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/DHC_Network_ID_txt__c.field-meta.xml
<CustomField>
    <fullName>DHC_Network_ID_txt__c</fullName>
    <formula>TEXT( texcellency__DefHC_NetworkID__c )</formula>
    <label>DHC Network ID</label>
    <type>Text</type>
</CustomField>