knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/DHC_Parent_Network_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>DHC_Parent_Network_ID_Formula__c</fullName>
    <formula>TEXT( texcellency__DefHC_Parent_NetworkID__c )</formula>
    <label>DHC Parent Network ID</label>
    <type>Text</type>
</CustomField>