knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/DHC_Payor_Mix_Medicare_formula__c.field-meta.xml
<CustomField>
    <fullName>DHC_Payor_Mix_Medicare_formula__c</fullName>
    <formula>texcellency__DefHC_PayorMixPctMedicare__c*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DHC Payor Mix % Medicare</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>