knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Directors_Max__c.field-meta.xml
<CustomField>
    <fullName>Directors_Max__c</fullName>
    <label>Directors Max</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>