knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Dissolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Dissolution_Date__c</fullName>
    <label>Dissolution Date</label>
    <type>Date</type>
</CustomField>