knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Dissolved_CT_Notified_Date__c.field-meta.xml
<CustomField>
    <fullName>Dissolved_CT_Notified_Date__c</fullName>
    <label>Dissolved CT Notified Date</label>
    <type>Date</type>
</CustomField>