knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Dissolved_Insurance_Date__c.field-meta.xml
<CustomField>
    <fullName>Dissolved_Insurance_Date__c</fullName>
    <label>Dissolved Insurance Date</label>
    <type>Date</type>
</CustomField>