knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>CASE(Text(Region__c), 
&quot;S1T1&quot;, &quot;1&quot;, 
&quot;S1T2&quot;, &quot;1&quot;, 
&quot;S1T3&quot;, &quot;1&quot;, 
&quot;S2T1&quot;, &quot;2&quot;, 
&quot;S2T2&quot;, &quot;2&quot;, 
&quot;S2T3&quot;, &quot;2&quot;, 
&quot;S2T4&quot;, &quot;2&quot;, 
&quot;S2T5&quot;, &quot;2&quot;, 
&quot;S3T1&quot;, &quot;3&quot;, 
&quot;S3T2&quot;, &quot;3&quot;, 
&quot;S3T3&quot;, &quot;3&quot;, 
&quot;S4T1&quot;, &quot;4&quot;, 
&quot;S4T2&quot;, &quot;4&quot;, 
&quot;S4T3&quot;, &quot;4&quot;,
&quot;WW&quot;, &quot;Wellness Works&quot;,
&quot;WW1&quot;, &quot;Wellness Works&quot;,
&quot;WW2&quot;, &quot;Wellness Works&quot;,
&quot;WW3&quot;, &quot;Wellness Works&quot;,
&quot;WW4&quot;, &quot;Wellness Works&quot;,
&quot;CM&quot;, &quot;Care Management&quot;,
&quot;No Region Entered&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section</label>
    <type>Text</type>
</CustomField>