knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Driving_Directions__c.field-meta.xml
<CustomField>
    <fullName>Driving_Directions__c</fullName>
    <label>Nearest Metropolitan City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>