knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/DSH_Payment_Medicare__c.field-meta.xml
<CustomField>
    <fullName>DSH_Payment_Medicare__c</fullName>
    <description>Medicare Disproportionate Share Hospital Payment</description>
    <label>DSH Payment Medicare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>