knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/E_signature_auth_for_NPPA_ppwk__c.field-meta.xml
<CustomField>
    <fullName>E_signature_auth_for_NPPA_ppwk__c</fullName>
    <label>E-signature auth for NPPA ppwk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>