knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Ease_of_Navigation_Consistency__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Navigation_Consistency__c</fullName>
    <label>Ease of Navigation/Consistency</label>
    <type>TextArea</type>
</CustomField>