knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EBITA__c.field-meta.xml
<CustomField>
    <fullName>EBITA__c</fullName>
    <label>EBITA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>