knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EBITA_as_of_Net_Revenues__c.field-meta.xml
<CustomField>
    <fullName>EBITA_as_of_Net_Revenues__c</fullName>
    <label>EBITA  as % of Net Revenues</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>