knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ED_Billable_Volume__c.field-meta.xml
<CustomField>
    <fullName>ED_Billable_Volume__c</fullName>
    <label>ED Billable Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>