knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ED_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>ED_Contract_Expiration__c</fullName>
    <label>ED Contract Expiration</label>
    <type>Date</type>
</CustomField>