knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ED_Observation_Beds__c.field-meta.xml
<CustomField>
    <fullName>ED_Observation_Beds__c</fullName>
    <description>Hospital provides Observation services within the Emergency Department (or in another location within the Hospital) operating under the Direction of the Emergency Medicine physician.</description>
    <inlineHelpText>Hospital provides Observation services within the Emergency Department (or in another location within the Hospital) operating under the Direction of the Emergency Medicine physician.</inlineHelpText>
    <label>ED Observation Beds</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>