knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ED_Region__c.field-meta.xml
<CustomField>
    <fullName>ED_Region__c</fullName>
    <formula>IF(
OR(
ISPICKVAL( Region__c, &quot;HM Central&quot;),
ISPICKVAL( Region__c, &quot;HM West&quot;),
ISPICKVAL( Region__c, &quot;HM East&quot;),
ISPICKVAL( Region__c, &quot;WW&quot;),
ISPICKVAL( Region__c, &quot;CM&quot;),
ISPICKVAL( Region__c, &quot;UC&quot;),
ISPICKVAL( Region__c, &quot;PT&quot;)
),
BLANKVALUE(TEXT(Parent.Region__c),&quot;No ED Region&quot;),
TEXT(Region__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ED Region</label>
    <type>Text</type>
</CustomField>