knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Effective_Use_of_Infographics__c.field-meta.xml
<CustomField>
    <fullName>Effective_Use_of_Infographics__c</fullName>
    <description>Effective Use of Infographics &amp; Iconography</description>
    <inlineHelpText>Effective Use of Infographics &amp; Iconography</inlineHelpText>
    <label>Effective Use of Infographics</label>
    <type>TextArea</type>
</CustomField>