knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EM_Potential_Spend__c.field-meta.xml
<CustomField>
    <fullName>EM_Potential_Spend__c</fullName>
    <label>EM Potential Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>