knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Employing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Employing_Entity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employing Entity</label>
    <type>Checkbox</type>
</CustomField>