knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EMR_Process__c.field-meta.xml
<CustomField>
    <fullName>EMR_Process__c</fullName>
    <label>EMR Process</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>