knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <description>Site draws visitor to engage &amp; learn about co. offerings, building Interest &amp; desire</description>
    <inlineHelpText>Site draws visitor to engage &amp; learn about co. offerings, building Interest &amp; desire</inlineHelpText>
    <label>Engagement</label>
    <type>TextArea</type>
</CustomField>