knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Entity_EIN__c.field-meta.xml
<CustomField>
    <fullName>Entity_EIN__c</fullName>
    <label>Entity EIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>