knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Entity_Status__c.field-meta.xml
<CustomField>
    <fullName>Entity_Status__c</fullName>
    <label>Entity Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Dissolved</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Name Changed</fullName>
            </value>
            <value>
                <fullName>Pending - Dissolution</fullName>
            </value>
            <value>
                <fullName>Pending - Name Reserved</fullName>
            </value>
            <value>
                <fullName>Pending - Name Search</fullName>
            </value>
            <value>
                <fullName>Pending - Sent for Filing</fullName>
            </value>
            <value>
                <fullName>Reservation Cancelled</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>