knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ER_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ER_End_Date__c</fullName>
    <label>EM End Date</label>
    <type>Date</type>
</CustomField>