knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ER_Former_Group__c.field-meta.xml
<CustomField>
    <fullName>ER_Former_Group__c</fullName>
    <label>EM Former Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>