knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ER_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>ER_Group_Description__c</fullName>
    <label>EM Group Description &amp; Tenure</label>
    <type>TextArea</type>
</CustomField>