knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ER_Satisfaction_del__c.field-meta.xml
<CustomField>
    <fullName>ER_Satisfaction_del__c</fullName>
    <label>EM Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0. Unknown</fullName>
            </value>
            <value>
                <fullName>1. Very dissatisfied</fullName>
            </value>
            <value>
                <fullName>2. Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>3. Neutral</fullName>
            </value>
            <value>
                <fullName>4. Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>5. Very satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>