knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/ER_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ER_Start_Date__c</fullName>
    <label>EM Start Date</label>
    <type>Date</type>
</CustomField>