knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EST_NUM_MEDICARE_CLAIMS_INPATIENT__c.field-meta.xml
<CustomField>
    <fullName>EST_NUM_MEDICARE_CLAIMS_INPATIENT__c</fullName>
    <description>Est. Number of Medicare Inpatient Claims</description>
    <label>Est. Num. Medicare Claims Impatient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>