knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EST_READMISSION_PENALTY__c.field-meta.xml
<CustomField>
    <fullName>EST_READMISSION_PENALTY__c</fullName>
    <description>FY2014 Est Revenue Loss Due to Readmission Penalty Adjustment</description>
    <label>Est. Readmission Penalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>