knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EST_TOTAL_CLAIMS_INPATIENT__c.field-meta.xml
<CustomField>
    <fullName>EST_TOTAL_CLAIMS_INPATIENT__c</fullName>
    <description>Est. Total of Inpatient Claims</description>
    <label>Est. Total Claims Inpatient</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>