knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EST_VBP_ADJUSTMENT__c.field-meta.xml
<CustomField>
    <fullName>EST_VBP_ADJUSTMENT__c</fullName>
    <description>FY2014 Est Revenue Adjustment due to Value-Based Purchasing Adjustment</description>
    <label>Est. VBP Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>