knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/EST_VBP_ADJUSTMENT_formula__c.field-meta.xml
<CustomField>
    <fullName>EST_VBP_ADJUSTMENT_formula__c</fullName>
    <formula>EST_VBP_ADJUSTMENT__c * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EST VBP ADJUSTMENT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>