knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facilities_0_25__c.field-meta.xml
<CustomField>
    <fullName>Facilities_0_25__c</fullName>
    <label>Facilities 0-25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>