knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facilities_100_91__c.field-meta.xml
<CustomField>
    <fullName>Facilities_100_91__c</fullName>
    <label>Facilities 100-91</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>