knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facilities_51_75__c.field-meta.xml
<CustomField>
    <fullName>Facilities_51_75__c</fullName>
    <label>Facilities 51-75</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>