knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities 26-50</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>